samples/_failures_safe/1761401949_2ae830_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a4dc345.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4a4dc345.c:167:35: error: expected ‘)’ at end of input
  167 |             column += strlen(token
      |                             ~     ^
      |                                   )
./samples/SAFE/__tmp_4a4dc345.c:167:30: error: incompatible type for argument 1 of ‘strlen’
  167 |             column += strlen(token
      |                              ^~~~~
      |                              |
      |                              struct Token
In file included from ./samples/SAFE/__tmp_4a4dc345.c:4:
/usr/include/string.h:407:35: note: expected ‘const char *’ but argument is of type ‘struct Token’
  407 | extern size_t strlen (const char *__s)
      |                       ~~~~~~~~~~~~^~~
./samples/SAFE/__tmp_4a4dc345.c:167:13: error: expected declaration or statement at end of input
  167 |             column += strlen(token
      |             ^~~~~~
./samples/SAFE/__tmp_4a4dc345.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4a4dc345.c:167:13: error: expected declaration or statement at end of input
